syntax = "proto3";

package proto;

option go_package = "/api";

message ImageInfo {
    string name = 1;
    string format = 2;
    string createDate = 3;
    string updateDate = 4;
}

message Image {
    ImageInfo info = 1;
    bytes data = 2;
}

message UploadImageRequest {
    Image image = 1;
}

message UploadImageResponse {}

message GetImagesListRequest {}

message GetImagesListResponse {
    repeated string list = 1;
}

message DownloadImageRequest {
    string name = 1;
    string format = 2;
}

message DownloadImageResponse {
    Image image = 1;
}

service ImagesHandler {
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse);
    rpc GetImagesList(GetImagesListRequest) returns (GetImagesListResponse);
    rpc DownloadImage(DownloadImageRequest) returns (stream DownloadImageResponse);
}